syntax = "proto3";

package nodedata.v1;
option go_package = "devtools-services/gen/nodedata/v1;nodedatav1";


message NodeApiCallData {
	string url = 1;
	string method = 2;
        map<string, string> query_params = 3;
        map<string, string> headers = 4;
        bytes body = 5;
}

message NodeForRemote {
        uint64 count = 1;
	string LoopStartNode = 2;
	uint64 MachinesAmount = 3;
}
